BLIN Gain: $ -3.59 Win %: 50.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2
BLIN Gain: $ -18.18 Win %: 16.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_TR_QP_DB6
BLIN Gain: $ -5.22 Win %: 33.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_RV_TR_DB6
BLIN Gain: $ -5.35 Win %: 33.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_RV_AV_DB6
BLIN Gain: $ -4.24 Win %: 50.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_RV_AL_DB6
BLIN Gain: $ -28.82 Win %: 16.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_RV_QP_DB6
BLIN Gain: $ -5.42 Win %: 33.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_HM_TR_DB6
BLIN Gain: $ -4.14 Win %: 66.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_HM_AV_DB6
BLIN Gain: $ -28.89 Win %: 16.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_HM_QP_DB6
BLIN Gain: $ -0.68 Win %: 33.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_IT_QL_DB6
BLIN Gain: $ -14.69 Win %: 33.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_IT_QP_DB6
BLIN Gain: $ -7.13 Win %: 16.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_TR_IR1
BLIN Gain: $ -22.88 Win %: 0 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_TR_QP
BLIN Gain: $ -38.09 Win %: 0 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_QP_IR1
BLIN Gain: $ -5.24 Win %: 33.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_RV_TR
BLIN Gain: $ -0.39 Win %: 50.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_RV_AV
BLIN Gain: $ -5 Win %: 33.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_RV_AL
BLIN Gain: $ -30.34 Win %: 16.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_RV_QP
BLIN Gain: $ -4.96 Win %: 33.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_HM_TR
BLIN Gain: $ 1.04 Win %: 66.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_HM_AV
BLIN Gain: $ -30.41 Win %: 16.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_HM_QP
BLIN Gain: $ -0.7 Win %: 33.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_IT_QL
BLIN Gain: $ -13.99 Win %: 16.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_IT_QP
BLIN Gain: $ -1570.83 Win %: 16.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_AO_AC
BLIN Gain: $ -3.7 Win %: 50.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_RV
BLIN Gain: $ -9.5 Win %: 16.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_IR1
BLIN Gain: $ -5.24 Win %: 33.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_TR
BLIN Gain: $ 0.09 Win %: 50.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_AV
BLIN Gain: $ -4.75 Win %: 33.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_AL
BLIN Gain: $ -0.72 Win %: 50.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_VI
BLIN Gain: $ -3.76 Win %: 50.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_LI
BLIN Gain: $ -30.28 Win %: 16.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_QP
BLIN Gain: $ -3.57 Win %: 50.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_HM
BLIN Gain: $ -6.04 Win %: 33.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_SS
BLIN Gain: $ -1.21 Win %: 16.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_QL
BLIN Gain: $ -5.9 Win %: 33.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_DB6
BLIN Gain: $ -353.13 Win %: 16.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_AO
BLIN Gain: $ -35.56 Win %: 33.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_AC
BLIN Gain: $ -1.94 Win %: 66.00 in 6 days with algo TB5_PL_QM_OB4_OS4_CB2_CS2_IT
BLIN Gain: $ -2.93 Win %: 33.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_TR_QP_DB15
BLIN Gain: $ -0.93 Win %: 33.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_TR_DB15
BLIN Gain: $ -2.79 Win %: 16.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AV_DB15
BLIN Gain: $ -1.1 Win %: 33.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AL_DB15
BLIN Gain: $ -3.2 Win %: 33.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_QP_DB15
BLIN Gain: $ 0.78 Win %: 50.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_TR_DB15
BLIN Gain: $ -4.07 Win %: 33.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_AV_DB15
BLIN Gain: $ -2.56 Win %: 33.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_QP_DB15
BLIN Gain: $ -0.19 Win %: 33.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QL_DB15
BLIN Gain: $ -0.19 Win %: 33.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QP_DB15
BLIN Gain: $ 0.52 Win %: 50.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_TR_IR4
BLIN Gain: $ -6.04 Win %: 16.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_TR_QP
BLIN Gain: $ -5.54 Win %: 16.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_QP_IR4
BLIN Gain: $ 0.93 Win %: 50.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_TR
BLIN Gain: $ -2.87 Win %: 16.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AV
BLIN Gain: $ -1.02 Win %: 33.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AL
BLIN Gain: $ -5.83 Win %: 16.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_QP
BLIN Gain: $ 0.22 Win %: 50.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_TR
BLIN Gain: $ -4.98 Win %: 33.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_AV
BLIN Gain: $ -4.93 Win %: 16.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_QP
BLIN Gain: $ -2.15 Win %: 16.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QL
BLIN Gain: $ -5.13 Win %: 16.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QP
BLIN Gain: $ 1.21 Win %: 50.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_AO_AC
BLIN Gain: $ 2.79 Win %: 66.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV
BLIN Gain: $ 2.97 Win %: 83.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IR4
BLIN Gain: $ -1.96 Win %: 33.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_TR
BLIN Gain: $ -6.84 Win %: 16.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_AV
BLIN Gain: $ -2.7 Win %: 33.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_AL
BLIN Gain: $ -1.82 Win %: 66.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_VI
BLIN Gain: $ -0.92 Win %: 50.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_LI
BLIN Gain: $ -6.27 Win %: 16.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_QP
BLIN Gain: $ 0.2 Win %: 66.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM
BLIN Gain: $ 0.11 Win %: 66.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_SS
BLIN Gain: $ -2.15 Win %: 16.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_QL
BLIN Gain: $ -0.66 Win %: 66.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_DB15
BLIN Gain: $ 0.7 Win %: 66.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_AO
BLIN Gain: $ -1.14 Win %: 50.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_AC
BLIN Gain: $ 0.08 Win %: 66.00 in 6 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IT
BLIN Gain: $ -11.3 Win %: 16.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_TR_QP_DB15
BLIN Gain: $ -5.15 Win %: 33.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV_TR_DB15
BLIN Gain: $ -1.22 Win %: 66.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV_AV_DB15
BLIN Gain: $ -0.98 Win %: 66.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV_AL_DB15
BLIN Gain: $ -25.67 Win %: 0 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV_QP_DB15
BLIN Gain: $ -5.77 Win %: 33.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_HM_TR_DB15
BLIN Gain: $ -0.79 Win %: 50.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_HM_AV_DB15
BLIN Gain: $ -24.9 Win %: 0 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_HM_QP_DB15
BLIN Gain: $ -0.06 Win %: 50.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_IT_QL_DB15
BLIN Gain: $ -12.68 Win %: 33.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_IT_QP_DB15
BLIN Gain: $ -0.43 Win %: 66.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_TR_IR4
BLIN Gain: $ -10.31 Win %: 33.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_TR_QP
BLIN Gain: $ -11.25 Win %: 16.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_QP_IR4
BLIN Gain: $ 0.86 Win %: 66.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV_TR
BLIN Gain: $ 0.96 Win %: 66.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV_AV
BLIN Gain: $ 0.6 Win %: 66.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV_AL
BLIN Gain: $ -20.82 Win %: 16.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV_QP
BLIN Gain: $ 0.29 Win %: 66.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_HM_TR
BLIN Gain: $ 1.99 Win %: 83.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_HM_AV
BLIN Gain: $ -20.19 Win %: 16.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_HM_QP
BLIN Gain: $ 1 Win %: 66.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_IT_QL
BLIN Gain: $ -12.39 Win %: 16.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_IT_QP
BLIN Gain: $ -0.14 Win %: 50.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_AO_AC
BLIN Gain: $ -0.3 Win %: 50.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV
BLIN Gain: $ 1.49 Win %: 66.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_IR4
BLIN Gain: $ 0.86 Win %: 66.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_TR
BLIN Gain: $ -2.16 Win %: 50.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_AV
BLIN Gain: $ 0.62 Win %: 66.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_AL
BLIN Gain: $ -1.31 Win %: 33.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_VI
BLIN Gain: $ -5.73 Win %: 33.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_LI
BLIN Gain: $ -19.78 Win %: 16.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_QP
BLIN Gain: $ 0.47 Win %: 50.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_HM
BLIN Gain: $ 0.11 Win %: 50.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_SS
BLIN Gain: $ 0.9 Win %: 50.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_QL
BLIN Gain: $ -2.56 Win %: 50.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_DB15
BLIN Gain: $ -0.14 Win %: 50.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_AO
BLIN Gain: $ -0.14 Win %: 50.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_AC
BLIN Gain: $ 0.87 Win %: 66.00 in 6 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_IT
BLIN Gain: $ -19.43 Win %: 0 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_TR_QP_DB15
BLIN Gain: $ -2.3 Win %: 50.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV_TR_DB15
BLIN Gain: $ -1.59 Win %: 50.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV_AV_DB15
BLIN Gain: $ -4.41 Win %: 33.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV_AL_DB15
BLIN Gain: $ -28.38 Win %: 0 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV_QP_DB15
BLIN Gain: $ -2.04 Win %: 50.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_HM_TR_DB15
BLIN Gain: $ 0.27 Win %: 50.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_HM_AV_DB15
BLIN Gain: $ -28.27 Win %: 0 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_HM_QP_DB15
BLIN Gain: $ -0.7 Win %: 16.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_IT_QL_DB15
BLIN Gain: $ -10.48 Win %: 16.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_IT_QP_DB15
BLIN Gain: $ -0.34 Win %: 50.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_TR_IR4
BLIN Gain: $ -12.22 Win %: 33.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_TR_QP
BLIN Gain: $ -10.82 Win %: 0 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_QP_IR4
BLIN Gain: $ -6.33 Win %: 33.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV_TR
BLIN Gain: $ -2.67 Win %: 50.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV_AV
BLIN Gain: $ -6.95 Win %: 33.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV_AL
BLIN Gain: $ -24.26 Win %: 16.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV_QP
BLIN Gain: $ -5.26 Win %: 33.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_HM_TR
BLIN Gain: $ -1.46 Win %: 50.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_HM_AV
BLIN Gain: $ -24.15 Win %: 16.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_HM_QP
BLIN Gain: $ 0.11 Win %: 50.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_IT_QL
BLIN Gain: $ -19.23 Win %: 16.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_IT_QP
BLIN Gain: $ -6.32 Win %: 33.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_AO_AC
BLIN Gain: $ -6.55 Win %: 33.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV
BLIN Gain: $ -6.65 Win %: 33.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_IR4
BLIN Gain: $ -5.99 Win %: 33.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_TR
BLIN Gain: $ -1.46 Win %: 50.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_AV
BLIN Gain: $ -5.86 Win %: 33.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_AL
BLIN Gain: $ -1.84 Win %: 16.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_VI
BLIN Gain: $ -6.01 Win %: 16.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_LI
BLIN Gain: $ -24.15 Win %: 16.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_QP
BLIN Gain: $ -6.27 Win %: 33.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_HM
BLIN Gain: $ -7.7 Win %: 33.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_SS
BLIN Gain: $ -0.21 Win %: 33.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_QL
BLIN Gain: $ -8.34 Win %: 16.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_DB15
BLIN Gain: $ -6.32 Win %: 33.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_AO
BLIN Gain: $ -6.32 Win %: 33.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_AC
BLIN Gain: $ -3.35 Win %: 50.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_IT
BLIN Gain: $ -3.35 Win %: 50.00 in 6 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_IT
BLIN Gain: $ -1.94 Win %: 57.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3
BLIN Gain: $ -9.56 Win %: 14.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_TR_QP_DB15
BLIN Gain: $ -0.02 Win %: 57.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_RV_TR_DB15
BLIN Gain: $ 1.24 Win %: 71.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_RV_AV_DB15
BLIN Gain: $ 0.54 Win %: 57.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_RV_AL_DB15
BLIN Gain: $ -19.3 Win %: 0 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_RV_QP_DB15
BLIN Gain: $ 0.01 Win %: 57.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_HM_TR_DB15
BLIN Gain: $ 0.93 Win %: 57.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_HM_AV_DB15
BLIN Gain: $ -18.95 Win %: 0 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_HM_QP_DB15
BLIN Gain: $ 0.8 Win %: 57.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_IT_QL_DB15
BLIN Gain: $ -0.27 Win %: 14.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_IT_QP_DB15
BLIN Gain: $ -2.46 Win %: 28.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_TR_IR4
BLIN Gain: $ -3.61 Win %: 42.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_TR_QP
BLIN Gain: $ -5.03 Win %: 14.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_QP_IR4
BLIN Gain: $ 1.01 Win %: 71.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_RV_TR
BLIN Gain: $ 1.39 Win %: 42.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_RV_AV
BLIN Gain: $ -1.07 Win %: 57.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_RV_AL
BLIN Gain: $ -15.48 Win %: 14.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_RV_QP
BLIN Gain: $ 1.49 Win %: 71.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_HM_TR
BLIN Gain: $ 1.67 Win %: 57.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_HM_AV
BLIN Gain: $ -0.21 Win %: 57.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_HM_AL
BLIN Gain: $ -15.67 Win %: 14.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_HM_QP
BLIN Gain: $ -1.06 Win %: 0 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_IT_QL
BLIN Gain: $ -0.07 Win %: 42.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_IT_QP
BLIN Gain: $ -1.94 Win %: 57.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_AO_AC
BLIN Gain: $ -0.82 Win %: 42.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_QP_PM
BLIN Gain: $ -0.9 Win %: 57.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_RV
BLIN Gain: $ -3 Win %: 42.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_IR4
BLIN Gain: $ 0.59 Win %: 71.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_TR
BLIN Gain: $ -1.12 Win %: 42.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_AV
BLIN Gain: $ -0.82 Win %: 57.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_AL
BLIN Gain: $ -1.31 Win %: 42.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_VI
BLIN Gain: $ -0.65 Win %: 57.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_LI
BLIN Gain: $ -15.65 Win %: 14.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_QP
BLIN Gain: $ -1.9 Win %: 57.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_HM
BLIN Gain: $ -2.41 Win %: 42.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_SS
BLIN Gain: $ -0.94 Win %: 14.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_QL
BLIN Gain: $ -1.34 Win %: 71.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_DB15
BLIN Gain: $ -1.94 Win %: 57.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_AO
BLIN Gain: $ -1.94 Win %: 57.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_AC
BLIN Gain: $ -1.12 Win %: 0 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_IT
BLIN Gain: $ -3.35 Win %: 28.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_PM
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB2_EO_EC_QM_OB2_OS2_CB3_CS3_TS
BLIN Gain: $ -3 Win %: 28.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_TR_QP_DB15
BLIN Gain: $ -1.46 Win %: 28.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_TR_DB15
BLIN Gain: $ -2.17 Win %: 42.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AV_DB15
BLIN Gain: $ -0.5 Win %: 42.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AL_DB15
BLIN Gain: $ -3.02 Win %: 42.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_QP_DB15
BLIN Gain: $ 1.12 Win %: 57.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_TR_DB15
BLIN Gain: $ -4.24 Win %: 28.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_AV_DB15
BLIN Gain: $ -2.63 Win %: 28.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_QP_DB15
BLIN Gain: $ -0.1 Win %: 42.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QL_DB15
BLIN Gain: $ -0.16 Win %: 14.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QP_DB15
BLIN Gain: $ 0.74 Win %: 57.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_TR_IR4
BLIN Gain: $ -6.1 Win %: 14.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_TR_QP
BLIN Gain: $ -5.89 Win %: 14.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_QP_IR4
BLIN Gain: $ 1.11 Win %: 57.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_TR
BLIN Gain: $ -3.24 Win %: 28.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AV
BLIN Gain: $ -0.19 Win %: 42.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AL
BLIN Gain: $ -6.03 Win %: 14.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_QP
BLIN Gain: $ 0.44 Win %: 57.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_TR
BLIN Gain: $ -4.91 Win %: 42.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_AV
BLIN Gain: $ -0.89 Win %: 57.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_AL
BLIN Gain: $ -4.99 Win %: 14.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_QP
BLIN Gain: $ -1.93 Win %: 28.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QL
BLIN Gain: $ -1.81 Win %: 0 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QP
BLIN Gain: $ 1.72 Win %: 57.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_AO_AC
BLIN Gain: $ -0.29 Win %: 85.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_QP_PM
BLIN Gain: $ 3.07 Win %: 71.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV
BLIN Gain: $ 3.19 Win %: 85.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IR4
BLIN Gain: $ -1.74 Win %: 42.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_TR
BLIN Gain: $ -6.77 Win %: 28.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_AV
BLIN Gain: $ -2.49 Win %: 42.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_AL
BLIN Gain: $ -1.65 Win %: 71.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_VI
BLIN Gain: $ -0.76 Win %: 57.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_LI
BLIN Gain: $ -6.33 Win %: 14.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_QP
BLIN Gain: $ 0.15 Win %: 71.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM
BLIN Gain: $ 0.24 Win %: 71.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_SS
BLIN Gain: $ -1.93 Win %: 28.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_QL
BLIN Gain: $ -0.68 Win %: 57.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_DB15
BLIN Gain: $ 1.02 Win %: 71.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_AO
BLIN Gain: $ -0.86 Win %: 57.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_AC
BLIN Gain: $ -2.12 Win %: 28.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IT
BLIN Gain: $ -0.29 Win %: 85.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_PM
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_TS
BLIN Gain: $ -12.29 Win %: 14.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_TR_QP_DB15
BLIN Gain: $ -5.14 Win %: 42.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV_TR_DB15
BLIN Gain: $ -0.92 Win %: 71.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV_AV_DB15
BLIN Gain: $ -0.69 Win %: 71.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV_AL_DB15
BLIN Gain: $ -27.09 Win %: 0 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV_QP_DB15
BLIN Gain: $ -5.5 Win %: 42.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_HM_TR_DB15
BLIN Gain: $ -0.75 Win %: 57.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_HM_AV_DB15
BLIN Gain: $ -26.32 Win %: 0 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_HM_QP_DB15
BLIN Gain: $ 0.31 Win %: 42.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_IT_QL_DB15
BLIN Gain: $ 0.05 Win %: 28.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_IT_QP_DB15
BLIN Gain: $ -0.13 Win %: 71.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_TR_IR4
BLIN Gain: $ -11.35 Win %: 28.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_TR_QP
BLIN Gain: $ -12.12 Win %: 14.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_QP_IR4
BLIN Gain: $ 1.16 Win %: 71.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV_TR
BLIN Gain: $ 1.02 Win %: 71.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV_AV
BLIN Gain: $ 0.54 Win %: 57.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV_AL
BLIN Gain: $ -22.66 Win %: 14.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV_QP
BLIN Gain: $ 0.59 Win %: 71.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_HM_TR
BLIN Gain: $ 1.93 Win %: 71.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_HM_AV
BLIN Gain: $ 1.88 Win %: 71.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_HM_AL
BLIN Gain: $ -22.03 Win %: 14.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_HM_QP
BLIN Gain: $ 1.3 Win %: 71.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_IT_QL
BLIN Gain: $ -0.62 Win %: 14.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_IT_QP
BLIN Gain: $ 0.16 Win %: 57.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_AO_AC
BLIN Gain: $ -15.76 Win %: 28.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_QP_PM
BLIN Gain: $ -0.04 Win %: 57.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_RV
BLIN Gain: $ 1.79 Win %: 71.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_IR4
BLIN Gain: $ 1.16 Win %: 71.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_TR
BLIN Gain: $ -1.94 Win %: 57.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_AV
BLIN Gain: $ 1.02 Win %: 71.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_AL
BLIN Gain: $ -1.39 Win %: 28.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_VI
BLIN Gain: $ -5.76 Win %: 28.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_LI
BLIN Gain: $ -21.62 Win %: 14.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_QP
BLIN Gain: $ 0.77 Win %: 57.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_HM
BLIN Gain: $ 0.41 Win %: 57.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_SS
BLIN Gain: $ 1.2 Win %: 57.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_QL
BLIN Gain: $ -2.41 Win %: 57.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_DB15
BLIN Gain: $ 0.16 Win %: 57.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_AO
BLIN Gain: $ 0.16 Win %: 57.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_AC
BLIN Gain: $ 1.27 Win %: 71.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_IT
BLIN Gain: $ -0.12 Win %: 57.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_PM
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB2_OO_QM_OB1_OS1_CB4_CS4_TS
BLIN Gain: $ -20.45 Win %: 0 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_TR_QP_DB15
BLIN Gain: $ -2.12 Win %: 57.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV_TR_DB15
BLIN Gain: $ 1.3 Win %: 42.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV_AV_DB15
BLIN Gain: $ -2.99 Win %: 42.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV_AL_DB15
BLIN Gain: $ -31.46 Win %: 0 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV_QP_DB15
BLIN Gain: $ -1.86 Win %: 57.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_HM_TR_DB15
BLIN Gain: $ 0.45 Win %: 57.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_HM_AV_DB15
BLIN Gain: $ -31.35 Win %: 0 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_HM_QP_DB15
BLIN Gain: $ -0.48 Win %: 14.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_IT_QL_DB15
BLIN Gain: $ -0.44 Win %: 14.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_IT_QP_DB15
BLIN Gain: $ -0.22 Win %: 57.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_TR_IR4
BLIN Gain: $ -13.47 Win %: 28.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_TR_QP
BLIN Gain: $ -12 Win %: 0 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_QP_IR4
BLIN Gain: $ -6.03 Win %: 42.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV_TR
BLIN Gain: $ -0.13 Win %: 42.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV_AV
BLIN Gain: $ -5.87 Win %: 42.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV_AL
BLIN Gain: $ -27.67 Win %: 14.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV_QP
BLIN Gain: $ -4.96 Win %: 42.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_HM_TR
BLIN Gain: $ -1.54 Win %: 42.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_HM_AV
BLIN Gain: $ -5.54 Win %: 42.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_HM_AL
BLIN Gain: $ -27.56 Win %: 14.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_HM_QP
BLIN Gain: $ -0.42 Win %: 14.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_IT_QL
BLIN Gain: $ -0.15 Win %: 14.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_IT_QP
BLIN Gain: $ -8.18 Win %: 28.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_AO_AC
BLIN Gain: $ -14.09 Win %: 28.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_QP_PM
BLIN Gain: $ -8.41 Win %: 28.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_RV
BLIN Gain: $ -7.15 Win %: 28.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_IR4
BLIN Gain: $ -5.69 Win %: 42.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_TR
BLIN Gain: $ -2.06 Win %: 42.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_AV
BLIN Gain: $ -5.54 Win %: 42.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_AL
BLIN Gain: $ -2.44 Win %: 14.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_VI
BLIN Gain: $ -6.99 Win %: 14.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_LI
BLIN Gain: $ -27.56 Win %: 14.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_QP
BLIN Gain: $ -8.13 Win %: 28.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_HM
BLIN Gain: $ -9.56 Win %: 28.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_SS
BLIN Gain: $ -0.45 Win %: 28.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_QL
BLIN Gain: $ -10.16 Win %: 14.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_DB15
BLIN Gain: $ -8.18 Win %: 28.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_AO
BLIN Gain: $ -8.18 Win %: 28.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_AC
BLIN Gain: $ -0.42 Win %: 14.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_IT
BLIN Gain: $ -6.9 Win %: 28.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_PM
BLIN Gain: $ 0 Win %: 100.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_TS
