BLIN Gain: $ -4.64 Win %: 42.00 in 7 days with algo TB2_CC_QM_OB3_OS3_CB2_CS2_TS
BLIN Gain: $ -3.08 Win %: 50.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5
BLIN Gain: $ -5.34 Win %: 25.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_TR_QP_DB10
BLIN Gain: $ -1.56 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR_DB10
BLIN Gain: $ 1.57 Win %: 50.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AV_DB10
BLIN Gain: $ -1.03 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AL_DB10
BLIN Gain: $ -7.62 Win %: 25.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_RV_QP_DB10
BLIN Gain: $ 0.99 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_HM_TR_DB10
BLIN Gain: $ 2.41 Win %: 50.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AV_DB10
BLIN Gain: $ -4.68 Win %: 25.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP_DB10
BLIN Gain: $ 1.39 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QL_DB10
BLIN Gain: $ -0.33 Win %: 25.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QP_DB10
BLIN Gain: $ -1.15 Win %: 50.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_TR_IR3
BLIN Gain: $ -6.41 Win %: 25.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_TR_QP
BLIN Gain: $ -4.83 Win %: 25.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_QP_IR3
BLIN Gain: $ -2.47 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR
BLIN Gain: $ -3.21 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AV
BLIN Gain: $ 0.81 Win %: 50.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AL
BLIN Gain: $ -8.85 Win %: 12.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_RV_QP
BLIN Gain: $ -1.57 Win %: 50.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_HM_TR
BLIN Gain: $ -3.78 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AV
BLIN Gain: $ -3.76 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AL
BLIN Gain: $ -7.99 Win %: 12.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP
BLIN Gain: $ -1.77 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QL
BLIN Gain: $ -0.34 Win %: 25.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QP
BLIN Gain: $ -3.66 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_AO_AC
BLIN Gain: $ -1.86 Win %: 50.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_QP_PM
BLIN Gain: $ 1.53 Win %: 75.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_TR_TS
BLIN Gain: $ -2.02 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_RV
BLIN Gain: $ -1.15 Win %: 50.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_IR3
BLIN Gain: $ -3.08 Win %: 50.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_TR
BLIN Gain: $ -3.57 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_AV
BLIN Gain: $ -3.55 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_AL
BLIN Gain: $ -1.5 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_VI
BLIN Gain: $ -3.66 Win %: 50.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_LI
BLIN Gain: $ -7.51 Win %: 12.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_QP
BLIN Gain: $ -1.43 Win %: 50.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_HM
BLIN Gain: $ -3.08 Win %: 50.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_SS
BLIN Gain: $ -1.77 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_QL
BLIN Gain: $ 0.24 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_DB10
BLIN Gain: $ -4.17 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_AO
BLIN Gain: $ -0.78 Win %: 50.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_AC
BLIN Gain: $ -1.86 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_IT
BLIN Gain: $ -2.96 Win %: 37.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_PM
BLIN Gain: $ 1.53 Win %: 75.00 in 8 days with algo TB3_HL_HS_QM_OB1_OS1_CB5_CS5_TS
BLIN Gain: $ -2.97 Win %: 37.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_TR_QP_DB15
BLIN Gain: $ -0.49 Win %: 50.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_TR_DB15
BLIN Gain: $ -2.17 Win %: 50.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AV_DB15
BLIN Gain: $ -0.4 Win %: 50.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AL_DB15
BLIN Gain: $ -3.24 Win %: 37.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_QP_DB15
BLIN Gain: $ 1.22 Win %: 62.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_TR_DB15
BLIN Gain: $ -4.16 Win %: 37.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_AV_DB15
BLIN Gain: $ -2.6 Win %: 37.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_QP_DB15
BLIN Gain: $ -0.19 Win %: 25.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QL_DB15
BLIN Gain: $ -0.15 Win %: 25.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QP_DB15
BLIN Gain: $ 0.79 Win %: 62.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_TR_IR4
BLIN Gain: $ -6.07 Win %: 25.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_TR_QP
BLIN Gain: $ -5.92 Win %: 12.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_QP_IR4
BLIN Gain: $ 1.29 Win %: 62.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_TR
BLIN Gain: $ -3.62 Win %: 25.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AV
BLIN Gain: $ -0.05 Win %: 50.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AL
BLIN Gain: $ -5.99 Win %: 25.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV_QP
BLIN Gain: $ 0.43 Win %: 50.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_TR
BLIN Gain: $ -5.07 Win %: 37.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_AV
BLIN Gain: $ -0.95 Win %: 50.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_AL
BLIN Gain: $ -5.01 Win %: 12.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM_QP
BLIN Gain: $ -1.98 Win %: 37.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QL
BLIN Gain: $ -1.83 Win %: 12.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QP
BLIN Gain: $ 1.15 Win %: 50.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_AO_AC
BLIN Gain: $ -0.28 Win %: 87.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_QP_PM
BLIN Gain: $ 2.02 Win %: 87.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_TR_TS
BLIN Gain: $ 3.21 Win %: 75.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_RV
BLIN Gain: $ 3.33 Win %: 87.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IR4
BLIN Gain: $ -1.6 Win %: 50.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_TR
BLIN Gain: $ -6.73 Win %: 37.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_AV
BLIN Gain: $ -2.56 Win %: 50.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_AL
BLIN Gain: $ -1.65 Win %: 75.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_VI
BLIN Gain: $ -0.62 Win %: 62.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_LI
BLIN Gain: $ -6.28 Win %: 25.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_QP
BLIN Gain: $ 0.54 Win %: 75.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_HM
BLIN Gain: $ 0.47 Win %: 75.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_SS
BLIN Gain: $ -1.79 Win %: 37.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_QL
BLIN Gain: $ -0.13 Win %: 75.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_DB15
BLIN Gain: $ 1.26 Win %: 75.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_AO
BLIN Gain: $ -1.15 Win %: 50.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_AC
BLIN Gain: $ -2 Win %: 37.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_IT
BLIN Gain: $ -0.21 Win %: 87.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_PM
BLIN Gain: $ 2.13 Win %: 87.00 in 8 days with algo TB2_HL_HI_QM_OB4_OS4_CB4_CS4_TS
BLIN Gain: $ -4.19 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_TR_QP_DB15
BLIN Gain: $ -1.58 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_RV_TR_DB15
BLIN Gain: $ -1.69 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_RV_AV_DB15
BLIN Gain: $ -1.92 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_RV_AL_DB15
BLIN Gain: $ -3.33 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_RV_QP_DB15
BLIN Gain: $ -1.3 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_HM_TR_DB15
BLIN Gain: $ -2.97 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_HM_AV_DB15
BLIN Gain: $ -4.37 Win %: 25.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_HM_QP_DB15
BLIN Gain: $ -1.13 Win %: 0 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_IT_QL_DB15
BLIN Gain: $ -0.16 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_IT_QP_DB15
BLIN Gain: $ -2.29 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_TR_IR4
BLIN Gain: $ -6.03 Win %: 25.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_TR_QP
BLIN Gain: $ -3.25 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_QP_IR4
BLIN Gain: $ 0.1 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_RV_TR
BLIN Gain: $ -3.51 Win %: 25.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_RV_AV
BLIN Gain: $ 0.18 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_RV_AL
BLIN Gain: $ -5.3 Win %: 12.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_RV_QP
BLIN Gain: $ -0.34 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_HM_TR
BLIN Gain: $ -1.82 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_HM_AV
BLIN Gain: $ 0.68 Win %: 62.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_HM_AL
BLIN Gain: $ -6.16 Win %: 12.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_HM_QP
BLIN Gain: $ -0.75 Win %: 12.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_IT_QL
BLIN Gain: $ -0.55 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_IT_QP
BLIN Gain: $ -0.13 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_AO_AC
BLIN Gain: $ -0.96 Win %: 62.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_QP_PM
BLIN Gain: $ 0.75 Win %: 62.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_TR_TS
BLIN Gain: $ 0.94 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_RV
BLIN Gain: $ 0.4 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_IR4
BLIN Gain: $ -0.62 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_TR
BLIN Gain: $ -4.8 Win %: 25.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_AV
BLIN Gain: $ 0.34 Win %: 62.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_AL
BLIN Gain: $ -0.79 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_VI
BLIN Gain: $ -1.45 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_LI
BLIN Gain: $ -6.19 Win %: 12.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_QP
BLIN Gain: $ 0.1 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_HM
BLIN Gain: $ 0.17 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_SS
BLIN Gain: $ -1.07 Win %: 12.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_QL
BLIN Gain: $ -0.55 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_DB15
BLIN Gain: $ -1.77 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_AO
BLIN Gain: $ -0.13 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_AC
BLIN Gain: $ -0.84 Win %: 12.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_IT
BLIN Gain: $ -0.97 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_PM
BLIN Gain: $ -0.53 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB5_OS5_CB4_CS4_TS
BLIN Gain: $ -10.55 Win %: 12.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_TR_QP_DB15
BLIN Gain: $ -1.05 Win %: 62.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_RV_TR_DB15
BLIN Gain: $ 0.97 Win %: 75.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_RV_AV_DB15
BLIN Gain: $ 1.14 Win %: 62.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_RV_AL_DB15
BLIN Gain: $ -11.41 Win %: 12.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_RV_QP_DB15
BLIN Gain: $ -1.05 Win %: 62.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_HM_TR_DB15
BLIN Gain: $ 0.52 Win %: 75.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_HM_AV_DB15
BLIN Gain: $ -11.88 Win %: 12.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_HM_QP_DB15
BLIN Gain: $ 1.09 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_IT_QL_DB15
BLIN Gain: $ -0.17 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_IT_QP_DB15
BLIN Gain: $ -2.45 Win %: 62.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_TR_IR4
BLIN Gain: $ -7.55 Win %: 25.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_TR_QP
BLIN Gain: $ -8.74 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_QP_IR4
BLIN Gain: $ -1.46 Win %: 62.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_RV_TR
BLIN Gain: $ -0.51 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_RV_AV
BLIN Gain: $ -1.07 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_RV_AL
BLIN Gain: $ -9.16 Win %: 25.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_RV_QP
BLIN Gain: $ -1.35 Win %: 62.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_HM_TR
BLIN Gain: $ -0.51 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_HM_AV
BLIN Gain: $ -1.01 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_HM_AL
BLIN Gain: $ -9.44 Win %: 25.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_HM_QP
BLIN Gain: $ -0.68 Win %: 25.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_IT_QL
BLIN Gain: $ -0.47 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_IT_QP
BLIN Gain: $ 0.63 Win %: 75.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_AO_AC
BLIN Gain: $ -11.85 Win %: 25.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_QP_PM
BLIN Gain: $ 1.15 Win %: 87.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_TR_TS
BLIN Gain: $ -0.31 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_RV
BLIN Gain: $ -2.81 Win %: 50.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_IR4
BLIN Gain: $ -1.46 Win %: 62.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_TR
BLIN Gain: $ -3.2 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_AV
BLIN Gain: $ -0.53 Win %: 37.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_AL
BLIN Gain: $ -0.03 Win %: 62.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_VI
BLIN Gain: $ 2.74 Win %: 62.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_LI
BLIN Gain: $ -8.82 Win %: 25.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_QP
BLIN Gain: $ 0.78 Win %: 75.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_HM
BLIN Gain: $ 1.08 Win %: 75.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_SS
BLIN Gain: $ -0.72 Win %: 25.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_QL
BLIN Gain: $ 0.75 Win %: 75.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_DB15
BLIN Gain: $ 0.63 Win %: 75.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_AO
BLIN Gain: $ 0.63 Win %: 75.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_AC
BLIN Gain: $ -0.83 Win %: 25.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_IT
BLIN Gain: $ -2.12 Win %: 75.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_PM
BLIN Gain: $ 0.05 Win %: 75.00 in 8 days with algo TB2_HI_QM_OB1_OS1_CB5_CS5_TS
